[feature] support obtain distribution from pg